# bsan

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-MIT  README.md  b  bsan  bsan.toml  config.toml  run-miri-bench.sh  rust-toolchain.toml  rustc-ice-2025-07-24T16_45_08-89552.txt  rustc-ice-2025-07-24T16_47_37-90997.txt  rustc-ice-2025-07-24T16_54_10-91562.txt  rustc-ice-2025-07-24T16_54_27-91753.txt  rustfmt.toml  test  vec-results.json  x  xb
.devcontainer/: Dockerfile  devcontainer.json
.github/: Dockerfile.prod
.github/workflows/: audit.yml  bench.yml  ci.yml  image.yml
bsan-debug/: Cargo.toml
bsan-debug/src/: lib.rs
bsan-driver/: Cargo.toml
bsan-driver/src/: callbacks.rs  expand_retag.rs  lib.rs
bsan-driver/tests/: ui.rs
bsan-driver/tests/pass/: hello.rs
bsan-pass/: BorrowSanitizer.cpp  BorrowSanitizer.h  BorrowSanitizerPass.cpp  BorrowSanitizerPass.h  CMakeLists.txt  Declarations.h  Provenance.cpp  Provenance.h  Utils.cpp
bsan-rt/: Cargo.toml  README.md  build.rs
bsan-rt/.cargo/: config.toml
bsan-rt/src/: block.rs  diagnostics.rs  dummy_span.rs  error.rs  errors.rs  global.rs  hooks.rs  lib.rs  local.rs  shadow.rs  span.rs  stack.rs  utils.rs
bsan-rt/src/borrow_tracker/: errors.rs  mod.rs  tree.rs  unimap.rs
bsan-rt/src/borrowtracker/: mod.rs
bsan-rt/src/memory/: heap.rs  hooks.rs  mod.rs  shadow.rs  stack.rs
bsan-script/: Cargo.toml  index.html  index.js  package.json  prepare-data.js  rust-toolchain.toml
bsan-script/bench/: TESTING.md  config.toml  data.js  index.html  index.html.rej  index.js  index.js.rej  prepare-data.js  prepare-data.js.rej  style.css
bsan-script/benches/benches/: .gitignore
bsan-script/benches/benches/results/: nothing-results.json
bsan-script/benches/results/: hello_world-results.json
bsan-script/benches/results/results_2025-10-27_05-47-34/: hello_stress-results.json  hello_world-results.json  nothing-results.json  vector-results.json
bsan-script/benches/results/results_2025-10-27_06-53-34/: hello_stress-results.json  hello_world-results.json  nothing-results.json  vector-results.json
bsan-script/benches/results/results_2025-10-27_07-01-08/: hello_stress-results.json  hello_world-results.json  nothing-results.json  vector-results.json
bsan-script/benches/results/results_2025-10-27_07-07-56/: hello_stress-results.json
bsan-script/benches/results/results_2025-10-27_07-09-55/: hello_stress-results.json  hello_world-results.json  nothing-results.json  vector-results.json
bsan-script/benches/results/results_2025-10-27_07-17-24/: hello_stress-results.json  hello_world-results.json  nothing-results.json  vector-results.json
bsan-script/benches/results/results_2025-10-27_07-21-23/: hello_stress-results.json  hello_world-results.json  nothing-results.json  vector-results.json
bsan-script/benches/results/results_2025-10-27_08-02-49/: hello_stress-results.json  hello_world-results.json  nothing-results.json  vector-results.json
bsan-script/etc/: pre-commit  pre-commit.sh  pre-push  pre-push.sh
bsan-script/hooks/: pre-commit
bsan-script/src/: commands.rs  download.rs  downloads.rs  env.rs  main.rs  setup.rs  utils.rs
bsan-shared/: Cargo.toml  README.md
bsan-shared/src/: foreign_access_skipping.rs  helpers.rs  lib.rs  perms.rs  range_map.rs  types.rs
cargo-bsan/: Cargo.toml
cargo-bsan/src/: main.rs  phases.rs  setup.rs  util.rs
images/: Dockerfile.dev  Dockerfile.prod
test_dependencies/: Cargo.toml
tests/: ui.rs
tests/benches/: bench.sh  hello_world  nothing  test.rs  vector.rs
tests/benches/results/: hello_stress-results.json  hello_world-results.json  nothing-results.json  vector-results.json
tests/benches/results/results_2025-10-03_16-06-03/: hello_stress-bsan.json  hello_stress-miri.json  hello_stress-native.json  hello_world-bsan.json  hello_world-miri.json  hello_world-native.json  nothing-bsan.json  nothing-miri.json  nothing-native.json
tests/benches/results/results_2025-10-03_16-16-24/: hello_stress-bsan.json  hello_stress-miri.json  hello_stress-native.json
tests/fail/: access_oob.rs  access_oob.run.stderr  free_box.rs  free_box.run.stderr  frozen_write.rs  frozen_write.run.stderr  protected_write.rs  protected_write.run.stderr  unique_ref.rs  unique_ref.run.stderr
tests/pass/: aliasing.rs  fmt_ref.rs  push_pop.rs
tests/test-cargo-bsan/: Cargo.toml  run.stdout.ref  run_test.py  setup.again.stderr.ref
tests/test-cargo-bsan/src/: main.rs
