[workspace]
members = ["bsan-driver", "bsan-rt", "bsan-script", "bsan-shared", "cargo-bsan", "example"]
default-members = ["bsan-driver", "bsan-script", "cargo-bsan"]
resolver = "3"

[package]
name = "bsan"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
colored = "2"
ui_test = "0.26.5"
rustc_version = "0.4"
regex = "1.5.5"
tempfile = "3"

[[test]]
name = "ui"
harness = false
