[workspace]
members = ["bsan-debug", "bsan-driver", "bsan-rt", "bsan-script", "bsan-shared", "cargo-bsan"]
default-members = ["bsan-driver", "bsan-script", "cargo-bsan"]
exclude = [".toolchain"]
resolver = "3"

[package]
name = "bsan"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
colored = "2"
ui_test = "0.29.2"
rustc_version = "0.4"
regex = "1.11.1"
tempfile = "3"

[[test]]
name = "ui"
harness = false
