[package]
name = "bsan-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.6"
log = "0.4.22"
rustc_version = "0.4.1"

[lib]
test = true     # we have unit tests
doctest = false # but no doc tests

[[bin]]
name = "bsan-driver"
test = false    # we have no unit tests
doctest = false # and no doc tests

[package.metadata.rust-analyzer]
rustc_private = true
