[package]
name = "bsan-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
rustc_version = "0.4.1"
bsan-shared = { path = "../bsan-shared" }

[lib]
test = true     # we have unit tests
doctest = false # but no doc tests

[[bin]]
name = "bsan-driver"
test = false    # we have no unit tests
doctest = false # and no doc tests

[package.metadata.rust-analyzer]
rustc_private = true
