[package]
name = "bsan-rt"
version = "0.1.0"
edition = "2024"

[features]
ui_test = []

[dependencies]
libc = { version = "0.2.169", default-features = false }
hashbrown = { version = "0.15.2", default-features = false, features = ["default-hasher", "nightly", "inline-more"] }
rustc-hash = { version = "2.1.1", default-features = false }
smallvec = { version = "1.14.0" }
libc-print = { version = "0.1.23" }
bsan-shared = { path = "../bsan-shared" }
spin = "0.10.0"
thiserror-no-std = "2.0.2"

[lib]
name = "bsan_rt"
crate-type = ["staticlib"] 
test = true     # we have unit tests
doctest = false # but no doc tests

