[package]
name = "bsan_rt"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { version = "0.2.176", default-features = false }
hashbrown = { version = "0.15.5", default-features = false, features = ["default-hasher", "nightly", "inline-more"] }
rustc-hash = { version = "2.1.1", default-features = false }
libc-print = { version = "0.1.23" }
bsan-shared = { path = "../bsan-shared" }
spin = "0.10.0"
thiserror-no-std = "2.0.2"
foldhash = { version = "0.1.5", default-features = false }
cfg-if = "1.0.3"

[lib]
name = "bsan_rt"
crate-type = ["staticlib"] 

[features]
default = ["pic"]
ui_test = []
pic = []
debug = []
