[package]
name = "cargo-bsan"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.21"
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
rustc-build-sysroot = "0.5.9"
rustc_version = "0.4"
path_macro = "1.0.0"

[build-dependencies]
rustc_tools_util = "0.4"

[package.metadata.rust-analyzer]
rustc_private = true
